{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 61,
  "lineage": "e3fe745a-8b45-4155-6320-c2224872d6eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a23ccb2cdd9286bb",
            "arn": "arn:aws:ec2:ap-south-1:697934817265:instance/i-073e22f91c993c8c7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073e22f91c993c8c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c081706bd90bd72e",
            "private_dns": "ip-10-0-1-248.ap-south-1.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-65-1-133-90.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.133.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a75cc95a2dacad4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086de7245423e283c",
            "tags": {
              "Environment": "Production",
              "Name": "K8S_Master"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "K8S_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d6359577e4a3d43"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a23ccb2cdd9286bb",
            "arn": "arn:aws:ec2:ap-south-1:697934817265:instance/i-05cb72229259d87ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cb72229259d87ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b863012076e6d750",
            "private_dns": "ip-10-0-1-188.ap-south-1.compute.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-3-6-86-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.86.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0173a13b58d135ebc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086de7245423e283c",
            "tags": {
              "Environment": "Production",
              "Name": "K8S_Slave1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "K8S_Slave1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d6359577e4a3d43"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "slave2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a23ccb2cdd9286bb",
            "arn": "arn:aws:ec2:ap-south-1:697934817265:instance/i-0e6c14d0f23861c94",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6c14d0f23861c94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04968b7dcf126e4ec",
            "private_dns": "ip-10-0-1-59.ap-south-1.compute.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-3-110-30-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.30.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b9e3e1a3f80194d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086de7245423e283c",
            "tags": {
              "Environment": "Production",
              "Name": "K8S_Slave2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "K8S_Slave2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d6359577e4a3d43"
            ]
          },
          "dependencies": [
            "aws_security_group.TerraformSG",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697934817265:internet-gateway/igw-09f4245693446b432",
            "id": "igw-09f4245693446b432",
            "owner_id": "697934817265",
            "tags": {
              "Name": "Terraform_IG"
            },
            "tags_all": {
              "Name": "Terraform_IG"
            },
            "vpc_id": "vpc-0a6653046ef24e6aa"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697934817265:route-table/rtb-06091f298a1330873",
            "id": "rtb-06091f298a1330873",
            "owner_id": "697934817265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f4245693446b432",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRouteTable"
            },
            "tags_all": {
              "Name": "TerraformRouteTable"
            },
            "vpc_id": "vpc-0a6653046ef24e6aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16c4e74f485d7ac",
            "route_table_id": "rtb-06091f298a1330873",
            "subnet_id": "subnet-086de7245423e283c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet_public1_Lab1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TerraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697934817265:security-group/sg-08d6359577e4a3d43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d6359577e4a3d43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TerraformSG",
            "name_prefix": "",
            "owner_id": "697934817265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Name": "TerraformSG"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6653046ef24e6aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public1_Lab1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697934817265:subnet/subnet-086de7245423e283c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-086de7245423e283c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697934817265",
            "tags": {
              "Environment": "Production",
              "Name": "subnet-1"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0a6653046ef24e6aa"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:697934817265:vpc/vpc-0a6653046ef24e6aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00abcc90c427b9203",
            "default_route_table_id": "rtb-0ae0187a7444b81b1",
            "default_security_group_id": "sg-0f04a65b16eb76c40",
            "dhcp_options_id": "dopt-953094fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a6653046ef24e6aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ae0187a7444b81b1",
            "owner_id": "697934817265",
            "tags": {
              "Environment": "Production",
              "Name": "TerraformVpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "TerraformVpc"
            }
          }
        }
      ]
    }
  ]
}